# elm-rust-webgl

./: Cargo.toml  build.sh  index.html  listen.sh  shell.nix  tmux.sh
assets/: playerstart.txt
assets/js/: rustcanvas.js
docs/: index.html
docs/assets/js/: elm.js  rustcanvas.js
docs/pkg/: info_player_start.d.ts  info_player_start.js  info_player_start_bg.wasm  info_player_start_bg.wasm.d.ts  package.json
elm/: elm.json  listen.sh
elm/bind/: Rust.elm
elm/src/: Key.elm  Main.elm  RustCanvas.elm  Tachyons.elm
elm_rust/: Cargo.toml  listen.sh
elm_rust/src/: lib.rs  main.rs
src/: app_state.rs  common_funcs.rs  lib.rs  smd.rs
src/programs/: color_2d.rs  mesh.rs  mod.rs  skybox.rs  texture.rs
src/shaders/fragment/: color_2d.rs  gradient.rs  mesh.rs  mod.rs  skybox.rs  sprite.rs  texture.rs
src/shaders/vertex/: color_2d.rs  mesh.rs  mod.rs  skybox.rs  sprite.rs  texture.rs
