[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
futures = "0.3"
lazy_static = "1.3.0"
nalgebra = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dependencies.web-sys]
version = "0.3.6"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'WebGlTexture',
    'Window',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Url',
    'Blob',
]
